# data-and-reporting-python-sdk

./: README.md  pyproject.toml  requirements.txt
doc/: client.md
doc/auth/: basic-authentication.md  oauth-2-client-credentials-grant.md
doc/controllers/: customer.md  invoice.md  o-auth-authorization.md  transaction.md
doc/models/: account-req.md  account-request.md  account-res.md  account-response-accounts-items.md  audit-array-elements.md  audit-req.md  audit-request.md  audit-response-audits-items.md  audit-response.md  card-group-req.md  card-group-request.md  card-group-res.md  card-type-req.md  card-type-res.md  card-usage-restrictions.md  card-usage-summary-req.md  card-usage-summary-res.md  card-usage-summary-response.md  col-co-access.md  customer-detail-request.md  customer-detail-response.md  customer-price-list-req.md  customer-price-list-res.md  customer-price-list-response.md  customer-req.md  customer-res.md  eid-access.md  eid-document.md  eid-search-req.md  eid-search-request.md  fee-item.md  fee-summary-response.md  filters.md  fleetmanagement-v1-user-loggedinuser-request.md  fuel-consumption-req.md  fuel-consumption-response.md  invoice-distribution-method.md  invoice-search-additional-document.md  invoice-search-details.md  invoice-search-request-filters.md  (+55 more)
doc/models/containers/: priced-transaction-response-transactions-items-location.md
shelldatareportingapis/: __init__.py  api_helper.py  configuration.py  shelldatareportingapis_client.py
shelldatareportingapis/controllers/: base_controller.py  customer_controller.py  invoice_controller.py  o_auth_authorization_controller.py  transaction_controller.py
shelldatareportingapis/exceptions/: __init__.py  api_exception.py  default_error_exception.py  error_object_exception.py  error_user_access_error_1_exception.py  o_auth_provider_exception.py
shelldatareportingapis/http/: http_call_back.py  http_method_enum.py  http_request.py  http_response.py
shelldatareportingapis/http/auth/: basic_auth.py  bearer_token.py  o_auth_2.py
shelldatareportingapis/models/: __init__.py  account_access.py  account_req.py  account_request.py  account_res.py  account_response.py  account_response_accounts_items.py  accounts.py  address.py  associated_account.py  audit_array_elements.py  audit_req.py  audit_request.py  audit_response.py  audit_response_audits_items.py  bank_account.py  bonus_configuration.py  bonus_history.py  card_day_time_restrictions.py  card_exceptions.py  card_group_req.py  card_group_request.py  card_group_res.py  card_group_response.py  card_group_response_card_groups_items.py  card_type_req.py  card_type_request.py  card_type_res.py  card_type_response.py  card_type_response_customer_card_types_items.py  card_type_response_error.py  card_usage_restrictions.py  card_usage_summary_req.py  card_usage_summary_request.py  card_usage_summary_res.py  card_usage_summary_response.py  col_co_access.py  current_volume.py  customer_contract.py  customer_detail_request.py  (+149 more)
shelldatareportingapis/utilities/: file_wrapper.py  union_type_lookup.py
tests/: http_response_catcher.py
tests/controllers/: controller_test_base.py  test_invoice_controller.py  test_transaction_controller.py
