[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "data-and-reporting-sdk"
description = "Data And Reporting product consists of API's which provides details of transaction and invoice informations about shell cards. The Shell Card Transaction and Invoice API is REST-based and employs Basic authentication in Version 1 and Oauth authentication in Version 2 end points. The API endpoints accept JSON-encoded request bodies, return JSON-encoded responses and use standard HTTP response codes. All resources are located in the Shell Card Platform. The Shell Card Platform is the overall platform that encompasses all the internal Shell systems used to manage resources."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Shell", "DataAndReporting", "APIMatic", "SDKs", "APIs"]
authors = [{name = "developer sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://developer.shell.com/product-catalog/data-and-reporting-premium/sdk#/http/setting-up-sdks"}
dependencies = ["apimatic-core~=0.2.0", "apimatic-core-interfaces~=0.1.0", "apimatic-requests-client-adapter~=0.1.0"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
