[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]
[project]
name = "data-and-reporting-sdk"
description = "Data And Reporting product consists of API's which provides details of transaction and invoice informations about shell cards. "
version = "1.2.1"
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Shell", "DataAndReporting", "APIMatic", "SDKs", "APIs"]
authors = [{name = "developer sdksio", email = "developer+sdksio@apimatic.io"}]
urls = {Documentation = "https://developer.shell.com/product-catalog/data-and-reporting-premium/sdk#/http/setting-up-sdks"}
dependencies = ["apimatic-core~=0.2.0, >= 0.2.17", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
