[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "data-and-reporting-sdk"
description = "Data And Reporting product consists of API's which provides details of transaction and invoice informations about shell cards. "
version = "2.0.0"
readme = "README.md"
keywords = ["Shell", "DataAndReporting", "APIMatic", "SDKs", "APIs"]
dependencies = ["apimatic-core~=0.2.0, >= 0.2.20", "apimatic-core-interfaces~=0.1.0, >= 0.1.5", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.6"]
classifiers = []
requires-python = ">=3.7"
[[project.authors]]
name = "developer sdksio"
email = "developer+sdksio@apimatic.io"

[project.urls]
Documentation = "https://developer.shell.com/product-catalog/data-and-reporting-premium/sdk#/http/setting-up-sdks"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
